//file:noinspection ConfigurationAvoidance
//file:noinspection GroovyAssignabilityCheck

import java.text.SimpleDateFormat

plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm'
}

test {
    def juggTestRootDir = file("$buildDir/test-jugg-home")
    systemProperty "jugg.root.dir", juggTestRootDir.absolutePath
    doFirst { juggTestRootDir.deleteDir() }
    minHeapSize = "512m" // initial heap size
    maxHeapSize = "8192m" // maximum heap size
    jvmArgs '-XX:MaxPermSize=152m' // mem argument for the test JVM
}

sourceCompatibility = 11
targetCompatibility = 11

compileKotlin {
    kotlinOptions.jvmTarget = "11"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "11"
}


repositories {
    google()
    mavenCentral()

    flatDir {
        dirs 'libs'
    }
}

def generatedRuntimeInfoDir = layout.buildDirectory.dir('generated/runtime-info')
def generateRuntimeInfo = tasks.register('generateRuntimeInfo') {
    def outputFile = generatedRuntimeInfoDir.map { it.file('META-INF/JUGG_PLUGIN_INFO.MF') }
    inputs.property('runtimeVersion', rootProject.pluginVersion)
    outputs.file(outputFile)
    doLast {
        def target = outputFile.get().asFile
        target.parentFile.mkdirs()
        target.text = """Version: ${rootProject.pluginVersion}
Compile-Date: ${new SimpleDateFormat('yyyy-MM-dd HH:mm:ss').format(new Date())}
Compile-Timestamp: ${System.currentTimeMillis()}
"""
    }
}

sourceSets.main.resources.srcDir(generatedRuntimeInfoDir)
tasks.named('processResources').configure { dependsOn(generateRuntimeInfo) }

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation(project(':main')) {
        exclude group: 'androidx.databinding'
    }
    implementation project(':deploy_compat:interface')
    implementation project(':deploy_compat:standalone_deployer')
    implementation project(':platform_compat:base_api')

    testImplementation "junit:junit:4.12"
    testImplementation "org.jetbrains.kotlin:kotlin-test:1.9.23"

    // override databinding library to Java 11 class, or will get:
    // android/databinding/parser/XMLParser$ElementContext has been compiled by a more recent version
    // of the Java Runtime (class file version 61.0), this version of the Java Runtime only recognizes
    // class file versions up to 55.0
    implementation 'androidx.databinding:databinding-compiler:7.4.2'
    implementation 'androidx.databinding:databinding-compiler-common:7.4.2'// https://mvnrepository.com/artifact/org.slf4j/slf4j-nop
    // avoid warning: "SLF4J: Failed to load class org.slf4j.impl.StaticLoggerBinder."
    implementation 'org.slf4j:slf4j-nop:1.7.36'
}

// Apply external distribution and packaging configuration
apply from: 'cmdline-distribution.gradle'

tasks.named('test').configure {
    dependsOn(tasks.named('installDist'))
}
